--- a/config.yml
+++ b/config.yml
@@ -1,26 +1,37 @@
 crawlers:
   - name: Helsinki
-    url: https://www.helsinkiklub.ch/
+    type: concert
+    url: https://www.helsinkiklub.ch
     event: ".event .header"
     fields:
-      artist: ".agenda .top"
+      title: ".agenda .top"
       comment: ".agenda .top .addition"
+      date:
+        day: ".day"
+        month: ".month"
+        location: "Europe/Berlin"
+        language: "DE"
   #     day:
   #     month:
 
   #   date_format: ""
 
   - name: Mehrspur
+    type: concert
     url: "https://www.mehrspur.ch/veranstaltungen"
     event: ".post-holder"
     fields:
-      artist: ".block_under_title a"
-      url: ".block_under_title a"
+      title: ".block_under_title a"
+      url: 
+        loc: ".block_under_title a"
       comment: ".event-excerpt-fluid"
 
   - name: Umbo
-    url: "https://www.umbo.wtf/"
+    type: concert
+    url: "https://www.umbo.wtf"
     event: ".w-dyn-item"
     fields:
-      artist: ".text-block-21"
-      url: ".div-block-19 .w-clearfix a"
+      title: ".text-block-21"
+      url:
+        loc: ".w-inline-block"
+        relative: true
