--- a/config.yml
+++ b/config.yml
@@ -5,12 +5,14 @@ crawlers:
     city: "Zurich"
     event: ".event .header"
     fields:
-      title: # only the first option that results in a non-empty title is taken into account.
-        - ".agenda .top"
-        - ".agenda .support"
-      comment: # only the first option that results in a non-empty comment is taken into account.
-        - ".agenda .top .addition"
-        - ".agenda .support .addition"
+      title: 
+        locs: # only the first option that results in a non-empty title is taken into account.
+          - ".agenda .top"
+          - ".agenda .support"
+      comment: 
+        locs: # only the first option that results in a non-empty comment is taken into account.
+          - ".agenda .top .addition"
+          - ".agenda .support .addition"
       date:
         day:
           loc: ".day"
@@ -28,11 +30,13 @@ crawlers:
     event: ".post-holder"
     fields:
       title:
-        - ".block_under_title a"
+        locs:
+          - ".block_under_title a"
+      comment:
+        locs:
+          - ".event-excerpt-fluid"
       url:
         loc: ".block_under_title a"
-      comment:
-        - ".event-excerpt-fluid"
       date:
         day_month:
           loc: ".event-date"
@@ -50,9 +54,11 @@ crawlers:
     event: ".w-dyn-item"
     fields:
       title:
-        - ".text-block-21"
+        locs:
+          - ".text-block-21"
       comment:
-        - ".text-block-28"
+        locs:
+          - ".text-block-28"
       url:
         loc: ".w-inline-block"
         relative: true
@@ -69,10 +75,16 @@ crawlers:
     event: ".event-list__item"
     fields:
       title:
-        - ".event-preview__title"
+        locs:
+          - ".event-preview__title"
+      comment:
+        locs:
+          - ".event-detail__content div p"
+        max_length: 200
       url:
         loc: "" # An empty string means that we look in the event node itself for an href
         relative: true
+        on_subpage: ["comment"]
       date:
         day_month_year_time:
           loc: ".event-preview__date-long"
@@ -80,84 +92,106 @@ crawlers:
         location: "GMT"
         language: "en_US"
 
-  - name: Unterfahrt
-    type: concert
-    url: "https://www.unterfahrt.de/programm.php"
-    city: "Munich"
-    event: ".b-events__el"
-    fields:
-      title: 
-        - ".b-events__el-title"
-      comment:
-        - ".b-events__el-text"
-      url:
-        loc: ".o-btn-cta__link"
-        relative: true
-      date:
-        day_month_year:
-          loc: ".b-events__el-date"
-          layout: "Mon•2•1•2006"
-          regex: # In case the node contains more than just the desired string the substring can be determined with a regex
-            exp: "[A-Za-z]{2}•[0-9]{1,2}•[0-9]{1,2}•[0-9]{4}"
-            index: 0
-        time:
-          loc: ".b-events__el-date"
-          layout: "15••04"
-          regex:
-            exp: "[0-9]{2}••[0-9]{2}"
-            index: -1
-        location: "Europe/Berlin"
-        language: "de_DE"
+  # - name: Unterfahrt
+  #   type: concert
+  #   url: "https://www.unterfahrt.de/programm.php"
+  #   city: "Munich"
+  #   event: ".b-events__el"
+  #   fields:
+  #     title: 
+  #       - ".b-events__el-title"
+  #     comment:
+  #       - ".b-events__el-text"
+  #     url:
+  #       loc: ".o-btn-cta__link"
+  #       relative: true
+  #     date:
+  #       day_month_year:
+  #         loc: ".b-events__el-date"
+  #         layout: "Mon•2•1•2006"
+  #         regex: # In case the node contains more than just the desired string the substring can be determined with a regex
+  #           exp: "[A-Za-z]{2}•[0-9]{1,2}•[0-9]{1,2}•[0-9]{4}"
+  #           index: 0
+  #       time:
+  #         loc: ".b-events__el-date"
+  #         layout: "15••04"
+  #         regex:
+  #           exp: "[0-9]{2}••[0-9]{2}"
+  #           index: -1
+  #       location: "Europe/Berlin"
+  #       language: "de_DE"
 
-  - name: Moods
-    type: concert
-    url: "https://www.moods.club/en/?a=1"
-    city: "Zurich"
-    event: ".event"
-    fields:
-      url:
-        loc: "a"
-        relative: true
-        on_subpage: ["comment", "date"]
-      title:
-        - "h2"
-      comment:
-        - ".left .content"
-      date:
-        day:
-          loc: ".date .day"
-          layout: "2"
-        month:
-          loc: ".date .month_name"
-          layout: "Jan"
-        time:
-          loc: ".right .time"
-          layout: "Start: 15:04"
-          node_index: -1 # -1 means the last node
-        location: "Europe/Berlin"
-        language: "en_US"
+  # - name: Moods
+  #   type: concert
+  #   url: "https://www.moods.club/en/?a=1"
+  #   city: "Zurich"
+  #   event: ".event"
+  #   fields:
+  #     url:
+  #       loc: "a"
+  #       relative: true
+  #       on_subpage: ["comment", "date"]
+  #     title:
+  #       - "h2"
+  #     comment:
+  #       - ".left .content"
+  #     date:
+  #       day:
+  #         loc: ".date .day"
+  #         layout: "2"
+  #       month:
+  #         loc: ".date .month_name"
+  #         layout: "Jan"
+  #       time:
+  #         loc: ".right .time"
+  #         layout: "Start: 15:04"
+  #         node_index: -1 # -1 means the last node
+  #       location: "Europe/Berlin"
+  #       language: "en_US"
 
-  - name: ImportExport
-    type: concert
-    url: "https://import-export.cc/"
-    city: "Munich"
-    event: ".events a"
-    exclude: ".old" # events that have a node with this class will be excluded from the results.
-    fields:
-      url:
-        loc: ""
-        on_subpage: ["date"]
-      title:
-        - ".io-title"
-      date:
-        day_month_year:
-          loc: ".event .event-info .io-big"
-          layout: "Mon. 2.1.06"
-          node_index: 0
-        time:
-          loc: ".event .event-info .io-big"
-          node_index: 3 # We need this in case there are multiple nodes that would be selected with the given loc
-          layout: "Beginn: 15.04"
-        location: "Europe/Berlin"
-        language: de_DE
+  # - name: ImportExport
+  #   type: concert
+  #   url: "https://import-export.cc/"
+  #   city: "Munich"
+  #   event: ".events a"
+  #   exclude: ".old" # events that have a node with this class will be excluded from the results.
+  #   fields:
+  #     url:
+  #       loc: ""
+  #       on_subpage: ["date"]
+  #     title:
+  #       - ".io-title"
+  #     date:
+  #       day_month_year:
+  #         loc: ".event .event-info .io-big"
+  #         layout: "Mon. 2.1.06"
+  #         node_index: 0
+  #       time:
+  #         loc: ".event .event-info .io-big"
+  #         node_index: 3 # We need this in case there are multiple nodes that would be selected with the given loc
+  #         layout: "Beginn: 15.04"
+  #       location: "Europe/Berlin"
+  #       language: de_DE
       
+  # - name: Milla
+  #   type: concert
+  #   city: Munich
+  #   url: "https://www.milla-club.de/category/event/"
+  #   event: ".preview-box-outline"
+  #   fields:
+  #     url:
+  #       loc: ".post-title a"
+  #     title:
+  #       - ".post-title"
+  #     date:
+  #       day:
+  #         loc: ".post-date-day"
+  #         layout: "02"
+  #       month:
+  #         loc: ".post-date-month"
+  #         layout: "Jan"
+  #       year:
+  #         loc: ".post-date-year"
+  #         layout: "2006"
+  #       location: "Europe/Berlin"
+  #       language: "de_DE"
