--- a/config.yml
+++ b/config.yml
@@ -92,106 +92,113 @@ crawlers:
         location: "GMT"
         language: "en_US"
 
-  # - name: Unterfahrt
-  #   type: concert
-  #   url: "https://www.unterfahrt.de/programm.php"
-  #   city: "Munich"
-  #   event: ".b-events__el"
-  #   fields:
-  #     title: 
-  #       - ".b-events__el-title"
-  #     comment:
-  #       - ".b-events__el-text"
-  #     url:
-  #       loc: ".o-btn-cta__link"
-  #       relative: true
-  #     date:
-  #       day_month_year:
-  #         loc: ".b-events__el-date"
-  #         layout: "Mon•2•1•2006"
-  #         regex: # In case the node contains more than just the desired string the substring can be determined with a regex
-  #           exp: "[A-Za-z]{2}•[0-9]{1,2}•[0-9]{1,2}•[0-9]{4}"
-  #           index: 0
-  #       time:
-  #         loc: ".b-events__el-date"
-  #         layout: "15••04"
-  #         regex:
-  #           exp: "[0-9]{2}••[0-9]{2}"
-  #           index: -1
-  #       location: "Europe/Berlin"
-  #       language: "de_DE"
+  - name: Unterfahrt
+    type: concert
+    url: "https://www.unterfahrt.de/programm.php"
+    city: "Munich"
+    event: ".b-events__el"
+    fields:
+      title: 
+        locs:
+          - ".b-events__el-title"
+      comment:
+        locs:
+          - ".b-events__el-text"
+      url:
+        loc: ".o-btn-hex__link"
+        relative: true
+      date:
+        day_month_year:
+          loc: ".b-events__el-date"
+          layout: "Mon•2•1•2006"
+          regex: # In case the node contains more than just the desired string the substring can be determined with a regex
+            exp: "[A-Za-z]{2}•[0-9]{1,2}•[0-9]{1,2}•[0-9]{4}"
+            index: 0
+        time:
+          loc: ".b-events__el-date"
+          layout: "15••04"
+          regex:
+            exp: "[0-9]{2}••[0-9]{2}"
+            index: -1
+        location: "Europe/Berlin"
+        language: "de_DE"
 
-  # - name: Moods
-  #   type: concert
-  #   url: "https://www.moods.club/en/?a=1"
-  #   city: "Zurich"
-  #   event: ".event"
-  #   fields:
-  #     url:
-  #       loc: "a"
-  #       relative: true
-  #       on_subpage: ["comment", "date"]
-  #     title:
-  #       - "h2"
-  #     comment:
-  #       - ".left .content"
-  #     date:
-  #       day:
-  #         loc: ".date .day"
-  #         layout: "2"
-  #       month:
-  #         loc: ".date .month_name"
-  #         layout: "Jan"
-  #       time:
-  #         loc: ".right .time"
-  #         layout: "Start: 15:04"
-  #         node_index: -1 # -1 means the last node
-  #       location: "Europe/Berlin"
-  #       language: "en_US"
+  - name: Moods
+    type: concert
+    url: "https://www.moods.club/en/?a=1"
+    city: "Zurich"
+    event: ".event"
+    fields:
+      url:
+        loc: "a"
+        relative: true
+        on_subpage: ["comment", "date"]
+      title:
+        locs:
+          - "h2"
+      comment:
+        locs:
+          - ".left .content"
+        max_length: 200
+      date:
+        day:
+          loc: ".date .day"
+          layout: "2"
+        month:
+          loc: ".date .month_name"
+          layout: "Jan"
+        time:
+          loc: ".right .time"
+          layout: "Start: 15:04"
+          node_index: -1 # -1 means the last node
+        location: "Europe/Berlin"
+        language: "en_US"
 
-  # - name: ImportExport
-  #   type: concert
-  #   url: "https://import-export.cc/"
-  #   city: "Munich"
-  #   event: ".events a"
-  #   exclude: ".old" # events that have a node with this class will be excluded from the results.
-  #   fields:
-  #     url:
-  #       loc: ""
-  #       on_subpage: ["date"]
-  #     title:
-  #       - ".io-title"
-  #     date:
-  #       day_month_year:
-  #         loc: ".event .event-info .io-big"
-  #         layout: "Mon. 2.1.06"
-  #         node_index: 0
-  #       time:
-  #         loc: ".event .event-info .io-big"
-  #         node_index: 3 # We need this in case there are multiple nodes that would be selected with the given loc
-  #         layout: "Beginn: 15.04"
-  #       location: "Europe/Berlin"
-  #       language: de_DE
+  - name: ImportExport
+    type: concert
+    url: "https://import-export.cc/"
+    city: "Munich"
+    event: ".events a"
+    exclude: ".old" # events that have a node with this class will be excluded from the results.
+    fields:
+      url:
+        loc: ""
+        on_subpage: ["date"]
+      title:
+        locs:
+          - ".io-title"
+      date:
+        day_month_year:
+          loc: ".event .event-info .io-big"
+          layout: "Mon. 2.1.06"
+          node_index: 0
+        time:
+          loc: ".event .event-info .io-big"
+          node_index: 3 # We need this in case there are multiple nodes that would be selected with the given loc
+          layout: "Beginn: 15.04"
+        location: "Europe/Berlin"
+        language: de_DE
       
-  # - name: Milla
-  #   type: concert
-  #   city: Munich
-  #   url: "https://www.milla-club.de/category/event/"
-  #   event: ".preview-box-outline"
-  #   fields:
-  #     url:
-  #       loc: ".post-title a"
-  #     title:
-  #       - ".post-title"
-  #     date:
-  #       day:
-  #         loc: ".post-date-day"
-  #         layout: "02"
-  #       month:
-  #         loc: ".post-date-month"
-  #         layout: "Jan"
-  #       year:
-  #         loc: ".post-date-year"
-  #         layout: "2006"
-  #       location: "Europe/Berlin"
-  #       language: "de_DE"
+  - name: Milla
+    type: concert
+    city: Munich
+    url: "https://www.milla-club.de/category/event/"
+    event: ".preview-box-outline"
+    fields:
+      url:
+        loc: ".post-title a"
+      title:
+        locs:
+          - ".post-title a"
+      date:
+        day:
+          loc: ".post-date-day"
+          layout: "02"
+        month:
+          loc: ".post-date-month"
+          layout: "Jan"
+        year:
+          loc: ".post-date-year"
+          layout: "2006"
+        location: "Europe/Berlin"
+        language: "de_DE"
