--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,10 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  crawl-all-events:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: crawl-env
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -26,5 +27,5 @@ jobs:
       
       # Runs a single command using the runners shell
       - name: Run the crawler
-        run: go run main.go
+        run: go run main.go -store
 
