--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run the crawler
         run: go run main.go -store
+        env:
+          API_USER: ${{ secrets.API_USER }}
+          API_PASSWORD: ${{ secrets.API_PASSWORD }}
+          CRONCERT_API: ${{ secrets.CRONCERT_API }}
 
