--- a/config.yml
+++ b/config.yml
@@ -255,3 +255,27 @@ crawlers:
     fields:
       title:
         loc: "h3"
+        regex:
+          exp: "[^•]*"
+          index: 0
+      comment:
+        loc: ".subtitle strong"
+      url:
+        loc: ".event-link"
+        on_subpage: ["date"]
+      date:
+        day_month_year:
+          loc: ".event-meta time"
+          layout: "Monday, 02.01.2006"
+          regex:
+            exp: "[a-zA-Z]+,\\s([0-9]{2}\\.){2}[0-9]{4}"
+            index: 0
+        time:
+          loc: ".event-meta .quick-facts li"
+          layout: "15:04"
+          node_index: 2 # if there are stille multiple text nodes under this node the first one that results in a regex match, will be used
+          regex:
+            exp: "[0-9]{2}:[0-9]{2}"
+            index: 0
+        location: "Europe/Berlin"
+        language: "de_DE"
