--- a/config.yml
+++ b/config.yml
@@ -273,9 +273,31 @@ crawlers:
         time:
           loc: ".event-meta .quick-facts li"
           layout: "15:04"
-          node_index: 2 # if there are stille multiple text nodes under this node the first one that results in a regex match, will be used
+          node_index: 2 # if there are still multiple text nodes under this node the first one that results in a regex match, will be used
           regex:
             exp: "[0-9]{2}:[0-9]{2}"
             index: 0
         location: "Europe/Berlin"
         language: "de_DE"
+
+  - name: HetDepot
+    type: concert
+    city: Leuven
+    url: "https://www.hetdepot.be/programma"
+    event: ".calendar-item"
+    fields:
+      title:
+        loc: ".calendar-item__title"
+      comment:
+        loc: ".calendar-item__intro p"
+      url:
+        loc: ".calendar-item__inner a"
+        relative: true
+        on_subpage: ["date"]
+      date:
+        day_month_year_time:
+          loc: ".concert__date time"
+          layout: "Monday 2 Jan 2006 - 15:04"
+        location: "Europe/Berlin"
+        language: "nl_BE"
+      
