--- a/config.yml
+++ b/config.yml
@@ -300,6 +300,9 @@ crawlers:
           layout: "Monday 2 Jan 2006 - 15:04"
         location: "Europe/Berlin"
         language: "nl_BE"
+    paginator:
+      loc: ".pager__item--next a"
+      relative: true
 
   - name: Backstage
     type: concert
