--- a/config.yml
+++ b/config.yml
@@ -284,7 +284,6 @@ crawlers:
     type: concert
     city: Leuven
     url: "https://www.hetdepot.be/programma"
-    # url: "https://www.hetdepot.be/programma?month_filter%5Bmin%5D=&month_filter%5Bmax%5D=&title=&page=1"
     event: ".calendar-item"
     fields:
       title:
@@ -334,7 +333,39 @@ crawlers:
     filters:
       - field: "title"
         regex_ignore: "CORONA TESTZENTRUM.*"
+    paginator:
+      loc: ".pagination .next"
+      relative: true
+      max_pages: 2 # otherwise this crawler takes ages.
 
+  - name: Tonhalle
+    type: concert
+    city: Zurich
+    url: "https://www.tonhalle-orchester.ch/en/home-tz/konzerte/kalender/"
+    event: ".js-calendarlist-list .data"
+    fields:
+      title:
+        loc: ".event h3"
+      comment:
+        loc: ".member .member-name"
+        node_index: 1
+      url:
+        loc: ".desktop-linkoverlay"
+        relative: true
+      date:
+        day_month:
+          loc: ".col-left .date"
+          layout: "2. Jan"
+          regex_extract:
+            exp: "[0-9]{1,2}\\.\\s[a-zA-Z]{3}"
+        time:
+          loc: ".col-left .hour"
+          layout: "15.04"
+          regex_extract:
+            exp: "[0-9]{1,2}\\.[0-9]{2}"
+    paginator:
+      loc: ".MarkupPagerNavNext a"
+      relative: true
 
 
       
