--- a/config.yml
+++ b/config.yml
@@ -450,3 +450,25 @@ crawlers:
             exp: "[0-9]{2}(\\.|:)[0-9]{2}"
             index: -1
         location: "Europe/Berlin"
+
+  - name: Muffatwerk
+    type: concert
+    city: Munich
+    url: "https://www.muffatwerk.de/de/events/concert"
+    event: ".row .event"
+    fields:
+      title:
+        loc: ".hover-in .center span"
+      url:
+        loc: ".hover-in .right a"
+        relative: true
+      date:
+        day_month:
+          loc: ".hover-in .center"
+          layout: "02.01."
+          regex_extract:
+            exp: "([0-9]{2}\\.){2}"
+        year:
+          loc: ".date br" # why does this find the correct year?
+          layout: "06"
+        
