--- a/config.yml
+++ b/config.yml
@@ -465,10 +465,18 @@ crawlers:
       date:
         day_month:
           loc: ".hover-in .center"
-          layout: "02.01."
+          layout: "02.01. "
           regex_extract:
-            exp: "([0-9]{2}\\.){2}"
+            exp: "([0-9]{2}\\.){2}\\s"
         year:
-          loc: ".date br" # why does this find the correct year?
-          layout: "06"
+          loc: ".date"
+          layout: "06	" # the whitespace in this string is a tab.
+          regex_extract:
+            exp: "[0-9]{2}\\s"
+        time:
+          loc: ".hover-in .center"
+          layout: "15:04"
+          regex_extract:
+            exp: "[0-9]{2}:[0-9]{2}"
+        location: "Europe/Berlin"
         
