--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,294 @@
+# Crawler configs are grouped by city and cities are sorted alphabetically.
+
 crawlers:
+  ##########
+  # Bologna
+  ##########
+  - name: LocomotivClub
+    type: concert
+    city: Bologna
+    url: "https://www.locomotivclub.it/eventtype/calendario/"
+    event: ".qt-item-event"
+    fields:
+      title:
+        loc: ".qt-text-shadow"
+      comment:
+        loc: ".qt-the-content div"
+      url:
+        loc: ".qt-text-shadow"
+        on_subpage: ["comment", "date"]
+      date:
+        day_month_year:
+          loc: ".qt-eventtable tr td"
+          # layout: " Data: 2 Febbraio 2022"
+          layout: " Data: 2 January 2006"
+          regex_extract:
+            exp: "\\sData:.*"
+        time:
+          loc: ".qt-eventtable tr td"
+          node_index: 2
+          # layout: " Inizio concerto: 9:30 pm"
+          layout: " Inizio concerto: 3:04 pm"
+          regex_extract:
+            exp: " Inizio concerto: .*"
+        location: "Europe/Berlin"
+        language: "it_IT"
+    filters:
+      - field: "title"
+        regex_ignore: ".*CANCELED.*"
+      - field: "title"
+        regex_ignore: "ANNULLATO!.*"
+      - field: "title"
+        regex_ignore: ".*Postponed.*"
+    paginator:
+      loc: ".pagination .qt-btn-primary"
+      node_index: -1
+      max_pages: 4
+
+  ##########
+  # Brussels
+  ##########
+  - name: Botanique
+    type: concert
+    city: Brussels
+    url: "https://botanique.be/en/concerts"
+    event: ".views-content .event-type-concert"
+    fields:
+      title:
+        loc: ".node-type-event__title h2 a span"
+      comment:
+        loc: ".location-list li"
+      url:
+        loc: ".node-type-event__title h2 a"
+        relative: true
+      date:
+        day:
+          loc: ".node-date__day"
+          layout: "02"
+        month:
+          loc: ".node-date__month"
+          layout: "Jan"
+        year:
+          loc: ".node-date__year"
+          layout: "2006"
+        time:
+          loc: ".node-type-event__timing"
+          layout: "15:04"
+          regex_extract:
+            exp: "[0-9]{2}:[0-9]{2}"
+        location: "Europe/Berlin"
+        language: "en_US"
+    paginator:
+      loc: ".pager__item a"
+      relative: true
+    filters:
+      - field: "title"
+        regex_ignore: ".*POSTPONED.*"
+      - field: "title"
+        regex_ignore: ".*CANCELLED.*"
+
+  ##########
+  # Leuven
+  ##########
+  - name: HetDepot
+    type: concert
+    city: Leuven
+    url: "https://www.hetdepot.be/programma"
+    event: ".calendar-item"
+    fields:
+      title:
+        loc: ".calendar-item__title"
+      comment:
+        loc: ".calendar-item__intro p"
+      url:
+        loc: ".calendar-item__inner a"
+        relative: true
+        on_subpage: ["date"]
+      date:
+        day_month_year_time:
+          loc: ".concert__date time"
+          layout: "Monday 2 Jan 2006 - 15:04"
+        location: "Europe/Berlin"
+        language: "nl_BE"
+    paginator:
+      loc: ".pager__item--next a"
+      relative: true
+
+  ##########
+  # Munich
+  ##########
+  - name: Unterfahrt
+    type: concert
+    url: "https://www.unterfahrt.de/programm.php"
+    city: "Munich"
+    event: ".b-events__el"
+    fields:
+      title: 
+        loc: ".b-events__el-title"
+      comment:
+        loc: ".b-events__el-text"
+        max_length: 200
+      url:
+        loc: ".o-btn-hex__link"
+        relative: true
+      date:
+        day_month_year:
+          loc: ".b-events__el-date"
+          layout: "Mon•2•1•2006"
+          regex_extract: # In case the node contains more than just the desired string the substring can be determined with a regex
+            exp: "[A-Za-z]{2}•[0-9]{1,2}•[0-9]{1,2}•[0-9]{4}"
+            index: 0
+        time:
+          loc: ".b-events__el-date"
+          layout: "15••04"
+          regex_extract:
+            exp: "[0-9]{2}••[0-9]{2}"
+            index: -1
+        location: "Europe/Berlin"
+        language: "de_DE"
+
+  - name: ImportExport
+    type: concert
+    url: "https://import-export.cc/"
+    city: "Munich"
+    event: ".events a"
+    exclude_with_selector: 
+      - ".old" # events that have a node with this class will be excluded from the results.
+    fields:
+      url:
+        loc: ""
+        on_subpage: ["date"]
+      title:
+        loc: ".io-title"
+      date:
+        day_month_year:
+          loc: ".event .event-info .io-big"
+          layout: "Mon. 2.1.06"
+          node_index: 0
+        time:
+          loc: ".event .event-info .io-big"
+          node_index: 3 # We need this in case there are multiple nodes that would be selected with the given loc
+          layout: "Beginn: 15.04"
+        location: "Europe/Berlin"
+        language: de_DE
+      
+  - name: Milla
+    type: concert
+    city: Munich
+    url: "https://www.milla-club.de/category/event/"
+    event: ".preview-box-outline"
+    fields:
+      url:
+        loc: ".post-title a"
+      title:
+        loc: ".post-title a"
+      date:
+        day:
+          loc: ".post-date-day"
+          layout: "02"
+        month:
+          loc: ".post-date-month"
+          layout: "Jan"
+        year:
+          loc: ".post-date-year"
+          layout: "2006"
+        location: "Europe/Berlin"
+        language: "de_DE"
+
+  - name: Backstage
+    type: concert
+    city: Munich
+    url: "https://backstage.info/veranstaltungen-2/alle-veranstaltungen"
+    event: ".event"
+    fields:
+      title:
+        loc: ".pos-title a"
+      comment:
+        loc: ".event h3"
+      url:
+        loc: ".pos-title a"
+        relative: true
+        on_subpage: ["comment", "date"]
+      date:
+        day_month_year:
+          loc: ".pos-datum b"
+          layout: "Monday, 2. January 2006"
+        time:
+          loc: ".pos-einlass"
+          layout: "Beginn: 15:04"
+          regex_extract:
+            exp: "Beginn: [0-9]{1,2}:[0-9]{2}"
+            index: 0
+        location: "Europe/Berlin"
+        language: "de_DE"
+    filters:
+      - field: "title"
+        regex_ignore: "CORONA TESTZENTRUM.*"
+    paginator:
+      loc: ".pagination .next"
+      relative: true
+      max_pages: 2 # otherwise this crawler takes ages.
+
+  - name: Strom
+    type: concert
+    city: Munich
+    url: "https://strom-muc.de/"
+    event: ".gdlr-event-item"
+    exclude_with_selector:
+      - ".cancelled-button"
+      - ".coming-soon"
+    fields:
+      title:
+        loc: ".event-title a"
+      url:
+        loc: ".event-title a"
+        on_subpage: ["date"]
+      date:
+        day_month_year:
+          loc: ".gdlr-info-date"
+          layout: "02.01.2006"
+          regex_extract:
+            exp: "([0-9]{2}\\.){2}[0-9]{4}"
+        time:
+          loc: ".gdlr-info-time"
+          layout: "15.04"
+          regex_extract:
+            exp: "[0-9]{2}(\\.|:)[0-9]{2}"
+            index: -1
+        location: "Europe/Berlin"
+
+  - name: Muffatwerk
+    type: concert
+    city: Munich
+    url: "https://www.muffatwerk.de/de/events/concert"
+    event: ".row .event"
+    fields:
+      title:
+        loc: ".hover-in .center span"
+      url:
+        loc: ".hover-in .right a"
+        relative: true
+      date:
+        day_month:
+          loc: ".hover-in .center"
+          layout: "02.01. "
+          regex_extract:
+            exp: "([0-9]{2}\\.){2}\\s"
+        year:
+          loc: ".date"
+          layout: "06	" # the whitespace in this string is a tab.
+          regex_extract:
+            exp: "[0-9]{2}\\s"
+        time:
+          loc: ".hover-in .center"
+          layout: "15:04"
+          regex_extract:
+            exp: "[0-9]{2}:[0-9]{2}"
+        location: "Europe/Berlin"
+
+  ##########
+  # Zurich
+  ##########
   - name: Helsinki
     type: concert
     url: https://www.helsinkiklub.ch
@@ -86,36 +376,6 @@ crawlers:
         location: "GMT"
         language: "en_US"
 
-  - name: Unterfahrt
-    type: concert
-    url: "https://www.unterfahrt.de/programm.php"
-    city: "Munich"
-    event: ".b-events__el"
-    fields:
-      title: 
-        loc: ".b-events__el-title"
-      comment:
-        loc: ".b-events__el-text"
-        max_length: 200
-      url:
-        loc: ".o-btn-hex__link"
-        relative: true
-      date:
-        day_month_year:
-          loc: ".b-events__el-date"
-          layout: "Mon•2•1•2006"
-          regex_extract: # In case the node contains more than just the desired string the substring can be determined with a regex
-            exp: "[A-Za-z]{2}•[0-9]{1,2}•[0-9]{1,2}•[0-9]{4}"
-            index: 0
-        time:
-          loc: ".b-events__el-date"
-          layout: "15••04"
-          regex_extract:
-            exp: "[0-9]{2}••[0-9]{2}"
-            index: -1
-        location: "Europe/Berlin"
-        language: "de_DE"
-
   - name: Moods
     type: concert
     url: "https://www.moods.club/en/?a=1"
@@ -144,54 +404,6 @@ crawlers:
           node_index: -1 # -1 means the last node
         location: "Europe/Berlin"
         language: "en_US"
-
-  - name: ImportExport
-    type: concert
-    url: "https://import-export.cc/"
-    city: "Munich"
-    event: ".events a"
-    exclude_with_selector: 
-      - ".old" # events that have a node with this class will be excluded from the results.
-    fields:
-      url:
-        loc: ""
-        on_subpage: ["date"]
-      title:
-        loc: ".io-title"
-      date:
-        day_month_year:
-          loc: ".event .event-info .io-big"
-          layout: "Mon. 2.1.06"
-          node_index: 0
-        time:
-          loc: ".event .event-info .io-big"
-          node_index: 3 # We need this in case there are multiple nodes that would be selected with the given loc
-          layout: "Beginn: 15.04"
-        location: "Europe/Berlin"
-        language: de_DE
-      
-  - name: Milla
-    type: concert
-    city: Munich
-    url: "https://www.milla-club.de/category/event/"
-    event: ".preview-box-outline"
-    fields:
-      url:
-        loc: ".post-title a"
-      title:
-        loc: ".post-title a"
-      date:
-        day:
-          loc: ".post-date-day"
-          layout: "02"
-        month:
-          loc: ".post-date-month"
-          layout: "Jan"
-        year:
-          loc: ".post-date-year"
-          layout: "2006"
-        location: "Europe/Berlin"
-        language: "de_DE"
 
   - name: ElLokal
     type: concert
@@ -281,64 +493,6 @@ crawlers:
         location: "Europe/Berlin"
         language: "de_DE"
 
-  - name: HetDepot
-    type: concert
-    city: Leuven
-    url: "https://www.hetdepot.be/programma"
-    event: ".calendar-item"
-    fields:
-      title:
-        loc: ".calendar-item__title"
-      comment:
-        loc: ".calendar-item__intro p"
-      url:
-        loc: ".calendar-item__inner a"
-        relative: true
-        on_subpage: ["date"]
-      date:
-        day_month_year_time:
-          loc: ".concert__date time"
-          layout: "Monday 2 Jan 2006 - 15:04"
-        location: "Europe/Berlin"
-        language: "nl_BE"
-    paginator:
-      loc: ".pager__item--next a"
-      relative: true
-
-  - name: Backstage
-    type: concert
-    city: Munich
-    url: "https://backstage.info/veranstaltungen-2/alle-veranstaltungen"
-    event: ".event"
-    fields:
-      title:
-        loc: ".pos-title a"
-      comment:
-        loc: ".event h3"
-      url:
-        loc: ".pos-title a"
-        relative: true
-        on_subpage: ["comment", "date"]
-      date:
-        day_month_year:
-          loc: ".pos-datum b"
-          layout: "Monday, 2. January 2006"
-        time:
-          loc: ".pos-einlass"
-          layout: "Beginn: 15:04"
-          regex_extract:
-            exp: "Beginn: [0-9]{1,2}:[0-9]{2}"
-            index: 0
-        location: "Europe/Berlin"
-        language: "de_DE"
-    filters:
-      - field: "title"
-        regex_ignore: "CORONA TESTZENTRUM.*"
-    paginator:
-      loc: ".pagination .next"
-      relative: true
-      max_pages: 2 # otherwise this crawler takes ages.
-
   - name: Tonhalle
     type: concert
     city: Zurich
@@ -422,104 +576,4 @@ crawlers:
         regex_ignore: ".*abgesagt.*"
       - field: "title"
         regex_ignore: "geschlossene Gesellschaft"
-
-  - name: Strom
-    type: concert
-    city: Munich
-    url: "https://strom-muc.de/"
-    event: ".gdlr-event-item"
-    exclude_with_selector:
-      - ".cancelled-button"
-      - ".coming-soon"
-    fields:
-      title:
-        loc: ".event-title a"
-      url:
-        loc: ".event-title a"
-        on_subpage: ["date"]
-      date:
-        day_month_year:
-          loc: ".gdlr-info-date"
-          layout: "02.01.2006"
-          regex_extract:
-            exp: "([0-9]{2}\\.){2}[0-9]{4}"
-        time:
-          loc: ".gdlr-info-time"
-          layout: "15.04"
-          regex_extract:
-            exp: "[0-9]{2}(\\.|:)[0-9]{2}"
-            index: -1
-        location: "Europe/Berlin"
-
-  - name: Muffatwerk
-    type: concert
-    city: Munich
-    url: "https://www.muffatwerk.de/de/events/concert"
-    event: ".row .event"
-    fields:
-      title:
-        loc: ".hover-in .center span"
-      url:
-        loc: ".hover-in .right a"
-        relative: true
-      date:
-        day_month:
-          loc: ".hover-in .center"
-          layout: "02.01. "
-          regex_extract:
-            exp: "([0-9]{2}\\.){2}\\s"
-        year:
-          loc: ".date"
-          layout: "06	" # the whitespace in this string is a tab.
-          regex_extract:
-            exp: "[0-9]{2}\\s"
-        time:
-          loc: ".hover-in .center"
-          layout: "15:04"
-          regex_extract:
-            exp: "[0-9]{2}:[0-9]{2}"
-        location: "Europe/Berlin"
-
-  - name: LocomotivClub
-    type: concert
-    city: Bologna
-    url: "https://www.locomotivclub.it/eventtype/calendario/"
-    event: ".qt-item-event"
-    fields:
-      title:
-        loc: ".qt-text-shadow"
-      comment:
-        loc: ".qt-the-content div"
-      url:
-        loc: ".qt-text-shadow"
-        on_subpage: ["comment", "date"]
-      date:
-        day_month_year:
-          loc: ".qt-eventtable tr td"
-          # layout: " Data: 2 Febbraio 2022"
-          layout: " Data: 2 January 2006"
-          regex_extract:
-            exp: "\\sData:.*"
-        time:
-          loc: ".qt-eventtable tr td"
-          node_index: 2
-          # layout: " Inizio concerto: 9:30 pm"
-          layout: " Inizio concerto: 3:04 pm"
-          regex_extract:
-            exp: " Inizio concerto: .*"
-        location: "Europe/Berlin"
-        language: "it_IT"
-    filters:
-      - field: "title"
-        regex_ignore: ".*CANCELED.*"
-      - field: "title"
-        regex_ignore: "ANNULLATO!.*"
-      - field: "title"
-        regex_ignore: ".*Postponed.*"
-    paginator:
-      loc: ".pagination .qt-btn-primary"
-      node_index: -1
-      max_pages: 4
-
-
         
