--- a/config.yml
+++ b/config.yml
@@ -577,3 +577,43 @@ crawlers:
       - field: "title"
         regex_ignore: "geschlossene Gesellschaft"
         
+  - name: Papiersaal
+    type: concert
+    city: Zurich
+    url: "https://www.papiersaal.ch/"
+    event: ".single-act"
+    fields:
+      title:
+        loc: ".col-sm-8 h2 a strong"
+      url:
+        loc: ".col-sm-8 h2 a"
+        relative: true
+        on_subpage: ["comment"]
+      comment:
+        loc: ".col-lg-12 p"
+        node_index: 2
+        max_length: 200
+      date:
+        day_month_year:
+          loc: ".col-sm-8 h3"
+          layout: "Monday, 2. Jan 2006"
+          regex_extract:
+            exp: "[A-Za-z]+,\\s[0-9]{1,2}\\.\\s[\u00e4A-Za-z]{3,4}\\s[0-9]{4}"
+        time:
+          loc: ".col-sm-8 i"
+          layout: "15h04"
+          child_index: 3 # we only need this because multiple children match the regex.
+          regex_extract:
+            exp: "[0-9]{2}h[0-9]{2}"
+        location: "Europe/Berlin"
+        language: "de_DE"
+    paginator:
+      loc: ".pull-right"
+      relative: true
+    filters:
+      - field: "title"
+        regex_ignore: ".*Abgesagt.*"
+      - field: "title"
+        regex_ignore: ".*Verschoben.*"
+      - field: "title"
+        regex_ignore: ".*VERSCHOBEN.*"
